--- a/maintenance.html
+++ b/maintenance.html
@@ -7,8 +7,10 @@
     <title>Maintainance</title>
     <style>
         body{
+            background-color: #221F28;
             background-image: url('maintenance.jpg');
             background-size: cover;
+            background-repeat: no-repeat;
         }
     </style>
 </head>
