--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <style id="applicationStylesheet" type="text/css">
 	body{
 		background-color: #211E27;
+		zoom: 70%;
 	}
 	a{
 		text-decoration: inherit;
@@ -989,6 +990,7 @@
 	}
 </style>
 <script id="applicationScript">
+// document.body.style.zoom="70%"
 ///////////////////////////////////////
 // INITIALIZATION
 ///////////////////////////////////////
@@ -4002,7 +4004,7 @@ window.application = new Application();
 		<img id="ID1-6BFOIdSHlk24Z3DFEakvnQ_cs" src="ID1-6BFOIdSHlk24Z3DFEakvnQ_cs.png" srcset="ID1-6BFOIdSHlk24Z3DFEakvnQ_cs.png 1x, ID1-6BFOIdSHlk24Z3DFEakvnQ_cs@2x.png 2x">
 	</a>
 	
-	<a href="maintenance.html">
+	<a href="https://github.com/nipunarora8/Thoughtful">
 		<!--thoughtful  -->
 		<img id="Image_16_ct" src="Image_16_ct.png" srcset="Image_16_ct.png 1x, Image_16_ct@2x.png 2x">
 	</a>
