Updated Mask Detection

--- a/index.html
+++ b/index.html
@@ -3985,7 +3985,7 @@ window.application = new Application();
 		<img id="Image_8_cg" src="Image_8_cg.png" srcset="Image_8_cg.png 1x, Image_8_cg@2x.png 2x">
 	</a>
 	
-	<a href="maintenance.html">
+	<a href="https://github.com/nipunarora8/Mask-Detection-TFOD">
 		<!-- mask -->
 		<img id="images-500x500_ch" src="images-500x500_ch.png" srcset="images-500x500_ch.png 1x, images-500x500_ch@2x.png 2x">
 	</a>
